--- a/C++ Slam/Readme
+++ b/C++ Slam/Readme
@@ -5,4 +5,4 @@ Our player will get the option to reroll the dice to get a different combination
 
 The player will be allowed to roll 2 more times. Your program will be looking at seven combinations.
 
-Please read CPP-Slam.pdf for more information.
+Please read C++ Slam/CPP-Slam.pdf for more information.
